@@ -1043,6 +1043,10 @@ name|ZkNodeProps
 operator|.
 name|makeMap
 argument_list|(
+literal|"useCompoundFile"
+argument_list|,
+name|effectiveUseCompoundFileSetting
+argument_list|,
 literal|"maxBufferedDocs"
 argument_list|,
 name|maxBufferedDocs
@@ -1070,6 +1074,14 @@ argument_list|,
 literal|"lockType"
 argument_list|,
 name|lockType
+argument_list|,
+literal|"infoStreamEnabled"
+argument_list|,
+name|infoStream
+operator|!=
+name|InfoStream
+operator|.
+name|NO_OUTPUT
 argument_list|)
 decl_stmt|;
 if|if
@@ -1100,9 +1112,27 @@ name|m
 operator|.
 name|put
 argument_list|(
-literal|"mergeScheduler"
+literal|"mergePolicy"
 argument_list|,
 name|mergePolicyInfo
+operator|.
+name|toMap
+argument_list|()
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|mergedSegmentWarmerInfo
+operator|!=
+literal|null
+condition|)
+name|m
+operator|.
+name|put
+argument_list|(
+literal|"mergedSegmentWarmer"
+argument_list|,
+name|mergedSegmentWarmerInfo
 operator|.
 name|toMap
 argument_list|()
