@@ -38,6 +38,16 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
+import|;
+end_import
+
+begin_import
+import|import
 name|javax
 operator|.
 name|xml
@@ -235,6 +245,39 @@ literal|"schema.xml"
 argument_list|)
 expr_stmt|;
 block|}
+DECL|field|instanceDir
+specifier|private
+specifier|final
+name|String
+name|instanceDir
+init|=
+operator|new
+name|File
+argument_list|(
+literal|"solr"
+argument_list|,
+literal|"collection1"
+argument_list|)
+operator|.
+name|getPath
+argument_list|()
+decl_stmt|;
+DECL|field|solrConfigFileNameWarmer
+specifier|private
+specifier|final
+name|String
+name|solrConfigFileNameWarmer
+init|=
+literal|"solrconfig-warmer.xml"
+decl_stmt|;
+DECL|field|solrConfigFileNameTieredMergePolicy
+specifier|private
+specifier|final
+name|String
+name|solrConfigFileNameTieredMergePolicy
+init|=
+literal|"solrconfig-tieredmergepolicy.xml"
+decl_stmt|;
 annotation|@
 name|Test
 DECL|method|testFailingSolrIndexConfigCreation
@@ -330,15 +373,9 @@ init|=
 operator|new
 name|SolrConfig
 argument_list|(
-literal|"solr"
-operator|+
-name|File
-operator|.
-name|separator
-operator|+
-literal|"collection1"
+name|instanceDir
 argument_list|,
-literal|"solrconfig-tieredmergepolicy.xml"
+name|solrConfigFileNameTieredMergePolicy
 argument_list|,
 literal|null
 argument_list|)
@@ -528,15 +565,9 @@ init|=
 operator|new
 name|SolrConfig
 argument_list|(
-literal|"solr"
-operator|+
-name|File
-operator|.
-name|separator
-operator|+
-literal|"collection1"
+name|instanceDir
 argument_list|,
-literal|"solrconfig-warmer.xml"
+name|solrConfigFileNameWarmer
 argument_list|,
 literal|null
 argument_list|)
@@ -629,6 +660,414 @@ name|getMergedSegmentWarmer
 argument_list|()
 operator|.
 name|getClass
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testToMap
+specifier|public
+name|void
+name|testToMap
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|String
+name|solrConfigFileName
+init|=
+operator|(
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|?
+name|solrConfigFileNameWarmer
+else|:
+name|solrConfigFileNameTieredMergePolicy
+operator|)
+decl_stmt|;
+name|SolrConfig
+name|solrConfig
+init|=
+operator|new
+name|SolrConfig
+argument_list|(
+name|instanceDir
+argument_list|,
+name|solrConfigFileName
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+name|SolrIndexConfig
+name|solrIndexConfig
+init|=
+operator|new
+name|SolrIndexConfig
+argument_list|(
+name|solrConfig
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|solrIndexConfig
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|solrIndexConfig
+operator|.
+name|mergePolicyInfo
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|solrConfigFileName
+operator|.
+name|equals
+argument_list|(
+name|solrConfigFileNameWarmer
+argument_list|)
+condition|)
+block|{
+name|assertNotNull
+argument_list|(
+name|solrIndexConfig
+operator|.
+name|mergedSegmentWarmerInfo
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|assertNull
+argument_list|(
+name|solrIndexConfig
+operator|.
+name|mergedSegmentWarmerInfo
+argument_list|)
+expr_stmt|;
+block|}
+name|assertNotNull
+argument_list|(
+name|solrIndexConfig
+operator|.
+name|mergeSchedulerInfo
+argument_list|)
+expr_stmt|;
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|m
+init|=
+name|solrIndexConfig
+operator|.
+name|toMap
+argument_list|()
+decl_stmt|;
+name|int
+name|mSizeExpected
+init|=
+literal|0
+decl_stmt|;
+operator|++
+name|mSizeExpected
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|m
+operator|.
+name|get
+argument_list|(
+literal|"useCompoundFile"
+argument_list|)
+operator|instanceof
+name|Boolean
+argument_list|)
+expr_stmt|;
+operator|++
+name|mSizeExpected
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|m
+operator|.
+name|get
+argument_list|(
+literal|"maxBufferedDocs"
+argument_list|)
+operator|instanceof
+name|Integer
+argument_list|)
+expr_stmt|;
+operator|++
+name|mSizeExpected
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|m
+operator|.
+name|get
+argument_list|(
+literal|"maxMergeDocs"
+argument_list|)
+operator|instanceof
+name|Integer
+argument_list|)
+expr_stmt|;
+operator|++
+name|mSizeExpected
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|m
+operator|.
+name|get
+argument_list|(
+literal|"maxIndexingThreads"
+argument_list|)
+operator|instanceof
+name|Integer
+argument_list|)
+expr_stmt|;
+operator|++
+name|mSizeExpected
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|m
+operator|.
+name|get
+argument_list|(
+literal|"mergeFactor"
+argument_list|)
+operator|instanceof
+name|Integer
+argument_list|)
+expr_stmt|;
+operator|++
+name|mSizeExpected
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|m
+operator|.
+name|get
+argument_list|(
+literal|"ramBufferSizeMB"
+argument_list|)
+operator|instanceof
+name|Double
+argument_list|)
+expr_stmt|;
+operator|++
+name|mSizeExpected
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|m
+operator|.
+name|get
+argument_list|(
+literal|"writeLockTimeout"
+argument_list|)
+operator|instanceof
+name|Integer
+argument_list|)
+expr_stmt|;
+operator|++
+name|mSizeExpected
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|m
+operator|.
+name|get
+argument_list|(
+literal|"lockType"
+argument_list|)
+operator|instanceof
+name|String
+argument_list|)
+expr_stmt|;
+block|{
+specifier|final
+name|String
+name|lockType
+init|=
+operator|(
+name|String
+operator|)
+name|m
+operator|.
+name|get
+argument_list|(
+literal|"lockType"
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|SolrIndexConfig
+operator|.
+name|LOCK_TYPE_SIMPLE
+operator|.
+name|equals
+argument_list|(
+name|lockType
+argument_list|)
+operator|||
+name|SolrIndexConfig
+operator|.
+name|LOCK_TYPE_NATIVE
+operator|.
+name|equals
+argument_list|(
+name|lockType
+argument_list|)
+operator|||
+name|SolrIndexConfig
+operator|.
+name|LOCK_TYPE_SINGLE
+operator|.
+name|equals
+argument_list|(
+name|lockType
+argument_list|)
+operator|||
+name|SolrIndexConfig
+operator|.
+name|LOCK_TYPE_NONE
+operator|.
+name|equals
+argument_list|(
+name|lockType
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+operator|++
+name|mSizeExpected
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|m
+operator|.
+name|get
+argument_list|(
+literal|"infoStreamEnabled"
+argument_list|)
+operator|instanceof
+name|Boolean
+argument_list|)
+expr_stmt|;
+block|{
+name|assertFalse
+argument_list|(
+name|Boolean
+operator|.
+name|valueOf
+argument_list|(
+name|m
+operator|.
+name|get
+argument_list|(
+literal|"infoStreamEnabled"
+argument_list|)
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+operator|.
+name|booleanValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+operator|++
+name|mSizeExpected
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|m
+operator|.
+name|get
+argument_list|(
+literal|"mergeScheduler"
+argument_list|)
+operator|instanceof
+name|Map
+argument_list|)
+expr_stmt|;
+operator|++
+name|mSizeExpected
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|m
+operator|.
+name|get
+argument_list|(
+literal|"mergePolicy"
+argument_list|)
+operator|instanceof
+name|Map
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|solrConfigFileName
+operator|.
+name|equals
+argument_list|(
+name|solrConfigFileNameWarmer
+argument_list|)
+condition|)
+block|{
+operator|++
+name|mSizeExpected
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|m
+operator|.
+name|get
+argument_list|(
+literal|"mergedSegmentWarmer"
+argument_list|)
+operator|instanceof
+name|Map
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|assertNull
+argument_list|(
+name|m
+operator|.
+name|get
+argument_list|(
+literal|"mergedSegmentWarmer"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+name|assertEquals
+argument_list|(
+name|mSizeExpected
+argument_list|,
+name|m
+operator|.
+name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
